--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,18 +1,22 @@
 .footer {
-  text-align: center;
-  padding: 60px;
-  background-color: #2c2b2b;
+  padding: 100px 0;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #0F3C42;
 }
 
-.footer a {
-  font-size: 30px;
-  color:  #1EDD88;
+.fab {
+  color: #0F3C42;
+  font-size: 4.25em;
+}
+
+.fab:hover {
+  opacity: 0.4;
 }
 
 .footer p {
-  color: #6B6C6C;
-}
-
-.footer .fas {
-  color: #BF0F12;
+  margin: 10px;
 }
