--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import url(components/cards.css);
 @import url(components/container.css);
 @import url(components/footer.css);
+@import url(components/avatar.css);
+@import url(components/navbar.css);
 
 /* Utilities */
 body {
@@ -19,6 +21,10 @@ h1, h2, h3, h4 {
 }
 
 a {
+  text-decoration: none;
+}
+
+a:hover {
   text-decoration: none;
 }
 
