--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import url(components/footer.css);
 @import url(components/avatar.css);
 @import url(components/navbar.css);
+@import url(components/searchbar.css);
 
 /* Utilities */
 body {
