--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import url(components/avatar.css);
 @import url(components/navbar.css);
 @import url(components/searchbar.css);
+@import url(components/pacman.css);
 
 /* Utilities */
 body {
