--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,12 +1,14 @@
 .footer {
   padding: 100px 0;
   background: linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1));
+  /* #FFE837 */
   background-size: cover;
   background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #0F3C42;
+  flex-direction: column;
 }
 
 .fab {
