--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 @import url(components/navbar.css);
 @import url(components/searchbar.css);
 @import url(components/pacman.css);
+@import url(components/wave.css);
 
 /* Utilities */
 body {
